infrastructure/victoria-metrics/ingress-route.yaml
# infrastructure/ingress/victoriametrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victoriametrics
  namespace: flux-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: vm.svc.lab.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: victoriametrics-victoria-metrics-single-server
                port:
                  number: 8428
